--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prod-build": "tsc",
     "preserve": "npm run build",
     "dev": "nodemon --exec ts-node index.ts",
+    "devv": "node --exec ts-node index.ts",
     "prestart": "npm run build",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
