--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "prod":"npm run build && node dist/server.js",
+    "prod": "npm run build && node dist/server.js",
     "start": "ts-node src/server.ts",
     "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc",
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "faker": "^6.6.6",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.8",
@@ -27,8 +28,10 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/faker": "^6.6.9",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.6",
     "concurrently": "^8.2.2",
